<resources>
    <string name="app_name">Life Style Demo</string>
    <string name="app_at_url" translatable="false">https://oauth-login.cloud.huawei.com/oauth2/v3/token</string>
    <string name="product_file_path">rest</string>
    <string name="food_file_path">food</string>
    <string name="img_file_path">image</string>
    <string name="log_in_success">Login Successfully</string>
    <string name="log_in_fail">Login Failed:</string>
    <string name="log_out_success">Logout Successfully</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_first">Please login first</string>
    <string name="title_home">Home</string>
    <string name="title_video">Comment</string>
    <string name="title_my">My</string>
    <string name="title_msg">Msg</string>
    <string name="title_scan">Scan</string>
    <string name="title_voice">Voice</string>
    <string name="notice">RequestNotice</string>
    <string name="sys_integrity_detecting">Detecting...</string>
    <string name="first_press_back">Press again to exit</string>
    <string name="ad_flag">Ad</string>
    <string name="add_coupon_success">Add coupon success</string>
    <string name="restaurant_not_existence">Restaurant not existence</string>
    <string name="please_use_correct_qr_code">Please use correct QR Code</string>
    <string name="data_init_fail">Data Initialization failed, please restart Demo.</string>
    <string name="version_checking">Checking...</string>
    <string name="is_the_latest_version">You version is up to date.</string>
    <string name="found_new_version">New version detected.\n Click here to update.</string>
    <string name="no_found_new_version">Failed to check the new version. Please try again later.</string>
    <string name="search_no_tip">Please input content to search</string>
    <string name="search_history">Search History</string>
    <string name="search_hot">Hot Search</string>
    <string name="delete_history">Clear History</string>
    <string name="check_delete_history">Do you confirm to delete history?</string>
    <string name="my_logout">Logout</string>
    <string name="click_to_login">Click to login</string>
    <string name="please_sign_first">Please login first</string>
    <string name="confirm_log_out">Do you confirm to log out?</string>
    <string name="news_no_data">No Data</string>
    <string name="news_no_more_data">No More Data</string>
    <string name="power_by">Powered By HMS Core</string>
    <string name="adskit_name">Ads Kit</string>
    <string name="ads_link">https://developer.huawei.com/consumer/en/hms/huawei-adskit?ha_source=hms7</string>
    <string name="ads_ads">Ads Shown</string>
    <string name="accountkit_name">Account Kit</string>
    <string name="account_link">https://developer.huawei.com/consumer/en/hms/huawei-accountkit?ha_source=hms7</string>
    <string name="account_login">One-click Sign-in</string>
    <string name="map_location">Location Kit&amp;Map Kit</string>
    <string name="gps_is_off">Some functions may be unavailable when the GPS switch is disabled.</string>
    <string name="map_location_link">https://developer.huawei.com/consumer/en/hms/huawei-MapKit?ha_source=hms7</string>
    <string name="delivery_path">Delivery Path Show</string>
    <string name="map_location_des">Generate the proper path from restaurant to user location. The deliverer can follow the path to send the food to user quickly. It will improve the operation efficiency.</string>
    <string name="mapkit_name">Map Kit</string>
    <string name="map_link">https://developer.huawei.com/consumer/en/hms/huawei-MapKit?ha_source=hms7</string>
    <string name="map_map">Global Map shown</string>
    <string name="site_name">Site Kit</string>
    <string name="site_link">https://developer.huawei.com/consumer/en/hms/huawei-sitekit?ha_source=hms7</string>
    <string name="site_geo">Nearby Search </string>
    <string name="site_geo_des">Address autocomplete capability suggests location names and addresses with keywords entered by the users, which helps users fill in addresses more quickly and optimize purchase experience.</string>
    <string name="scan_name">Scan Kit</string>
    <string name="scan_link">https://developer.huawei.com/consumer/en/hms/huawei-scankit?ha_source=hms7</string>
    <string name="scan_pay">Scan Pay</string>
    <string name="scan_code">Scan QrCode</string>
    <string name="scan_shopping">Scan Shopping</string>
    <string name="scan_qr_des">The scanning service can scans, parses, and generates major 1D and 2D barcodes, and realize restaurant operation such as coupon obtain or restaurant sharing. (Scan Kit can be integrated into both Android and iOS apps.)</string>
    <string name="mlkit_name">ML Kit</string>
    <string name="ml_link">https://developer.huawei.com/consumer/en/hms/huawei-mlkit?ha_source=hms7</string>
    <string name="ml_asr">ASR</string>
    <string name="ml_translate">Text Translation</string>
    <string name="ml_resolution">Image Super-Resolution</string>
    <string name="ml_bankcard">Bank Card Recognition</string>
    <string name="analytics_name">Analytics Kit</string>
    <string name="analytics_link">https://developer.huawei.com/consumer/en/hms/huawei-analyticskit?ha_source=hms7</string>
    <string name="analytics_report">Analytics Report</string>
    <string name="location_name">Location Kit</string>
    <string name="location_link">https://developer.huawei.com/consumer/en/hms/huawei-locationkit?ha_source=hms7</string>
    <string name="location_geo">GeoFence</string>
    <string name="location_lbs">LBS</string>
    <string name="push_name">Push Kit</string>
    <string name="push_link">https://developer.huawei.com/consumer/en/hms/huawei-pushkit?ha_source=hms7</string>
    <string name="push_message">Message Push</string>
    <string name="subscribe_message">Subscription/Favorite item Message</string>
    <string name="video_name">Video Kit</string>
    <string name="video_link">https://developer.huawei.com/consmer/en/hms/huawei-videokit?ha_source=hms7</string>
    <string name="video_play">Video Display</string>
    <string name="iap_name">In-App Purchases</string>
    <string name="iap_link">https://developer.huawei.com/consumer/en/hms/huawei-iap?ha_source=hms7</string>
    <string name="member_purchase">Members Purchase</string>
    <string name="panorama_name">Panorama Kit</string>
    <string name="panorama_link">https://developer.huawei.com/consumer/en/hms/huawei-panoramakit?ha_source=hms7</string>
    <string name="panorama_fullview">Interactive Viewing</string>
    <string name="safety_name">Safety Detect</string>
    <string name="safety_link">https://developer.huawei.com/consumer/en/hms/huawei-safetydetectkit?ha_source=hms7</string>
    <string name="system_integrate">System integrity</string>
    <string name="network_name">Network Kit</string>
    <string name="network_link">https://developer.huawei.com/consumer/en/hms/huawei-networkkit?ha_source=hms7</string>
    <string name="good_connection">High Quality Connection</string>
    <string name="wallet_name">Wallet Kit</string>
    <string name="wallet_link">https://developer.huawei.com/consumer/en/hms/huawei-walletkit?ha_source=hms7</string>
    <string name="wallet_member">Loyalty Cards</string>
    <string name="fido_name">FIDO Kit</string>
    <string name="fido_link">https://developer.huawei.com/consumer/en/hms/huawei-fido?ha_source=hms7</string>
    <string name="fido_face">Facial Authentication</string>
    <string name="fido_finger">Fingerprint Authentication</string>
    <string name="ml_translation_des">Online translation between 40 languages enables users around the world to browse comment content.</string>
    <string name="ml_resolution_des">Improves the resolution of restaurant images for better restaurant browsing experience and saves cloud resources.</string>
    <string name="ml_bankcard_des">ML Kit pure end-side capabilities for general card OCR, including bank card recognition, covering five major types of bank card globally with low latency and an accuracy rate of 99&#37;, which can be widely used in financial payment scenarios.</string>
    <string name="account_login_des">One-click sign-in capability help users sign HUAWEI ID into Life style App without manual login or verification.</string>
    <string name="iap_sub_des">In-App Purchases support subscription and membership purchase experience with multi-language, multi-restaurant, multi-payment methods, etc.</string>
    <string name="video_play_des">The video service supports smoother HD video playback, allowing users to fully know the restaurant in a more scene-oriented experience.</string>
    <string name="ads_des">Huawei ads service supports multiple advertisement display modes, such as splash ads when an app is opened, native ads are inserted in the restaurant list to obtain monetization benefits for life style app developers.</string>
    <string name="location_lbs_des">Accurate access to the location of users and displays nearby restaurants.</string>
    <string name="push_notify_des">The timely and accurate message push service helps applications reach users precisely and improve user experience.</string>
    <string name="push_sub_des">The push messages triggered by users through subscription and favorite items and other actions accurately reaches the users, optimizing the operation work and promoting consumption.</string>
    <string name="analytics_report_des">Huawei Analytics Service provides free data analysis and comparison for a wide range of devices and platforms, so you can make informed decisions on restaurant optimization and marketing based on your users\' behavior.</string>
    <string name="ml_asr_des">Achieve high-precision ASR (Automatic Speech Recognition) capability for life style App voice search to help users quickly search for restaurant and food.</string>
    <string name="panorama_fullview_des">360° showcases and interactions in a 3D space are the future of image viewing. Immerse your users in an all-encompassing experience.</string>
    <string name="address_save">Address save</string>
    <string name="address_delete">Address delete</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="region">Region</string>
    <string name="region_hint">Please enter a region</string>
    <string name="address">Detailed Address</string>
    <string name="address_hint">Building/House Number</string>
    <string name="set_default_address">Set the default address</string>
    <string name="location">location</string>
    <string name="message_box">Message box</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="need_to_pay">Need To Pay %d Yuan</string>
    <string name="brush_face_payment">Face Payment</string>
    <string name="fingerprint_payment">Fingerprint Payment</string>
    <string name="bank_card_payment">Bank Card Payment</string>
    <string name="facial_identifying">Facial recognition in progress.</string>
    <string name="face_acquired_good">Please keep.</string>
    <string name="payment_succeeded">Payment succeeded!</string>
    <string name="paid">Paid %d Yuan</string>
    <string name="view_orders">View Orders</string>
    <string name="to_home_page">Back To Home Page</string>
    <string name="comment_post">Post comments</string>
    <string name="comment_release">Release</string>
    <string name="coupon_five2one">10 - 1</string>
    <string name="member_platinum">Platinum VIP Member</string>
    <string name="member_join">Join Now</string>
    <string name="member_pick">Pick Coupon</string>
</resources>