<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <include
                android:id="@+id/lTitle"
                layout="@layout/layout_base_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:text="@string/select_payment_method"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/need_to_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/need_to_pay"
                android:textSize="18sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="120dp" />

            <TextView
                android:id="@+id/brush_face_payment"
                style="@style/PaymentBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brush_face_payment" />

            <TextView
                android:id="@+id/fingerprint_payment"
                style="@style/PaymentBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fingerprint_payment" />

            <TextView
                android:id="@+id/bank_card_payment"
                style="@style/PaymentBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bank_card_payment" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/face_auth_help"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:onClick="onClick"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="100dp"
                android:src="@mipmap/facial_identifying" />

            <TextView
                android:id="@+id/tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/face_acquired_good" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/facial_identifying"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>
</layout>