<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            android:id="@+id/lTitle"
            layout="@layout/layout_base_title" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="100dp"
            android:src="@mipmap/payment_succeed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/payment_succeeded"
            android:textSize="28dp" />

        <TextView
            android:id="@+id/paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/paid"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_orders"
            style="@style/PaymentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/view_orders" />

        <TextView
            android:id="@+id/to_home_page"
            style="@style/PaymentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/to_home_page" />

    </LinearLayout>
</layout>