<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/cancel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16dp"
            android:textStyle="bold"
            android:paddingStart="6dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/comment_post"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_evaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_submit_type"
            android:gravity="center"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="5dp"
            android:text="@string/comment_release"
            android:textColor="@color/white"
            android:textSize="16dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>