<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_messageinfo_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/tab_10dp"
            android:paddingTop="@dimen/dp_15"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_15"
            android:src="@mipmap/icon_back" />

        <TextView
            android:id="@+id/tv_messageinfo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/message_box"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />
    </RelativeLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/sf_messageinfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAccentColor="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_messageinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"></androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/news_no_data"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"
                android:visibility="gone"></TextView>
        </RelativeLayout>

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAccentColor="@color/black"
            app:srlTextFinish="@string/news_no_more_data" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>